# sentiric-tts-gateway-service

./: .context.md  .dockerignore  .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  LOGIC.md  Makefile  README.md  SETUP.md  SPECIFICATION.md  TASKS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.service.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: app.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  metrics.rs  tls.rs
src/clients/: coqui.rs  mms.rs  mod.rs  omnivoice.rs
src/grpc/: mod.rs  server.rs  service.rs
src/services/: mod.rs  tts_proxy.rs
