[package]
name = "sentiric-tts-gateway-service"
version = "1.2.7"
edition = "2021"
authors = ["Sentiric Team"]

[dependencies]
# Async Runtime & Web
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"
futures = "0.3"

# gRPC & Protobuf
tonic = { version = "0.11", features = ["tls", "gzip"] }
prost = "0.12"

# Config & Environment
config = "0.14"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
url = "2.5"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Observability (SUTS v4.0 Requirements)
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
hyper = { version = "0.14.28", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Sentiric Ecosystem
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.16.0" }

[build-dependencies]
tonic-build = "0.11"